--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             <div class="form-group">
                 <button type="button" id="startExam">Start In Exam Mode</button>
             </div>
+            <div class="form-group">
+                <a href="upload.html"><button type="button">Start Practice Mode</button></a>
+            </div>
             <a href="upload.html">Upload Custom Paragraph</a>
         </form>
         <footer>
