--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <button type="button" id="startExam">Start In Exam Mode</button>
             </div>
             <div class="form-group">
-                <a href="upload.html"><button type="button">Start Practice Mode</button></a>
+                <a href="https://balakram.github.io/practicemode/"><button type="button">Start Practice Mode</button></a>
             </div>
             <a href="upload.html">Upload Custom Paragraph</a>
         </form>
