--- a/upload.html
+++ b/upload.html
@@ -25,7 +25,7 @@
             <ul id="paragraphList"></ul>
         </form>
         <footer>
-            <p>Developed by Balakram Tudu &copy; 2024</p>
+            <p>Developed by Balakram Tudu &copy; 2024 Typing Test</p>
         </footer>
     </div>
     <script src="upload.js"></script>
